# Rudis

./: Cargo.toml  README.md  TODO.md  config.yaml  package-lock.json  package.json
.husky/: commit-msg
src/: lib.rs  main.rs
src/config/: config.rs  mod.rs  reader.rs
src/log/: init.rs
src/operations/: mod.rs
src/operations/bitmap/: ops.rs
src/operations/hash/: ops.rs
src/operations/help/: help.rs
src/operations/list/: ops.rs
src/operations/set/: ops.rs
src/operations/sorted_set/: ops.rs
src/operations/string/: ops.rs
src/tests/: client.rs
