[package]
name = "rudis"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.44.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
fern = { version = "0.7.1", features = ["colored"] }
log = "0.4.26"
chrono = "0.4.40"

[[example]]
name = "cli"
path = "src/tests/client.rs"
